// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination> current page to be 5 1`] = `
<div
  class="PaginationContainer"
  data-testid="pagination"
>
  <button
    class=""
  >
    1
  </button>
  <button
    aria-label="Previous"
  >
    «
  </button>
  <button
    class=" active"
  >
    5
  </button>
  <button
    aria-label="Next"
  >
    »
  </button>
  <button
    class=""
  >
    10
  </button>
</div>
`;

exports[`<Pagination> default 1`] = `
<div
  class="PaginationContainer"
  data-testid="pagination"
>
  <button
    class=" active"
  >
    1
  </button>
  <button
    class=""
  >
    2
  </button>
  <button
    class=""
  >
    3
  </button>
  <button
    aria-label="Next"
  >
    »
  </button>
  <button
    class=""
  >
    10
  </button>
</div>
`;

exports[`<Pagination> should have page limit 5 1`] = `
<div
  class="PaginationContainer"
  data-testid="pagination"
>
  <button
    class=" active"
  >
    1
  </button>
  <button
    class=""
  >
    2
  </button>
  <button
    class=""
  >
    3
  </button>
  <button
    aria-label="Next"
  >
    »
  </button>
  <button
    class=""
  >
    20
  </button>
</div>
`;

exports[`<Pagination> should have page neighbors 2 1`] = `
<div
  class="PaginationContainer"
  data-testid="pagination"
>
  <button
    class=" active"
  >
    1
  </button>
  <button
    class=""
  >
    2
  </button>
  <button
    class=""
  >
    3
  </button>
  <button
    class=""
  >
    4
  </button>
  <button
    class=""
  >
    5
  </button>
  <button
    class=""
  >
    6
  </button>
  <button
    class=""
  >
    7
  </button>
  <button
    aria-label="Next"
  >
    »
  </button>
  <button
    class=""
  >
    10
  </button>
</div>
`;
